correccion de ubicacion de paquete mapper

--- a/ems-frontend/src/App.css
+++ b/ems-frontend/src/App.css
@@ -1,8 +1,9 @@
 .footer {
-    margin-top: auto; /* Empuja el footer al final de la página */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 50px;
     background-color: black;
     text-align: center;
     color: white;
-    padding: 10px;
 }
